<resources>
    <string name="app_name">ZocDocClone</string>
    <string name="tv_sign_in_or_create_an_account">Sign in or create an account</string>
    <string name="tie_sign_in_password">password</string>
    <string name="tie_sign_in_email_address">email address</string>
    <string name="tv_login_sign_in_forgot_your_password">Forgot your password?</string>
    <string name="tv_login_sign_in_new_to_zocdoc">New to ZocDocClone?</string>
    <string name="tv_sign_up_activity_create_an_account">Create an account</string>
    <string name="tv_sign_up_activity_already_have_one_sign_in">Already have one? Sign In</string>
    <string name="tv_sign_up_activity_enter_your_email">Enter your email</string>
    <string name="tiet_sign_up_activity_example_gmail_com">example@gmail.com</string>
    <string name="tv_sign_up_activity_confirm_your_email">Confirm your email</string>
    <string name="tiet_sign_up_activity_please_confirm_your_email">Please confirm your email</string>
    <string name="tv_sign_up_activity_create_a_password">Create a password</string>
    <string name="tv_sign_up_activity_your_name">Your name</string>
    <string name="tiet_sign_up_activity_first_and_last_name">First and last name</string>
    <string name="tv_sign_up_activity_date_of_birth">Date of birth</string>
    <string name="tiet_sign_up_activity_date_format">MM/DD/YYYY</string>
    <string name="tv_sign_up_activity_sex">Sex</string>
    <string name="rb_male_option">Male</string>
    <string name="rb_female_option">Female</string>
    <string name="cb_please_read_and_accept_the_terms_of_use_and_privacy_policy">Please read and accept the Terms of Use and Privacy Policy</string>
    <string name="cb_i_have_read_and_accept_zocdocclone_authorization">I have read and accept ZocDocClone Authorization!</string>
    <string name="btn_sign_up_activity_save_and_continue">Save and continue</string>
    <string name="btn_login_activity_sign_in">Sign In</string>
    <string name="btn_login_activity_create_an_account">Create an account</string>

    <string-array name="appointment_medical_category_values">
        <item>Family Medicine</item>
        <item>Cardiology</item>
        <item>Radiology</item>
        <item>Neurology</item>
        <item>Ophtalmology</item>
        <item>Dermatology</item>
        <item>Pediatrics</item>
    </string-array>

    <string-array name="appointment_doctors_values">
        <item>Dr.Charles</item>
        <item>Dr.Willwow</item>
        <item>Dr.Mary</item>
        <item>Dr.William</item>
        <item>Dr.Connory</item>
        <item>Dr.Isabell</item>
        <item>Dr.Matthew</item>
    </string-array>

    <string-array name="appointment_hour_values">
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
    </string-array>

    <string name="main_covid_date_last_update">%1$d/%2$d
    </string>
    <string name="card_total_cases_text">TOTAL INFECTED</string>
    <string name="cv_total_recovered_text">TOTAL RECOVERED</string>
    <string name="cv_total_tested_text">TOTAL TESTED</string>
    <string name="cv_total_death_text">TOTAL DEATHS</string>
    <string name="card_total_cases_json">1.752.123</string>
    <string name="card_total_tested_json">10.573.329</string>
    <string name="card_total_recovered_json">1.606.820</string>
    <string name="card_total_death_json">54.011</string>
    <string name="card_date_update_json">11/11</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZocDocClone</string>
    <string name="nav_header_subtitle">The Future of Healthcare</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>